--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# macOS system files
+.DS_Store
+
+# Virtual environments
+venv/
+.env/
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+
+# Jupyter notebook checkpoints
+.ipynb_checkpoints/
+
+# VSCode / IDE configs
+.vscode/
+.idea/
+
+# Logs and temp files
+*.log
+*.tmp
+
+# Power BI autosave/temp
+*.pbix.autosave
 # Ignore macOS system files
 .DS_Store
 
